chore: add only linting for now [skip ci]

--- a/.github/workflows/lint_fmt.yml
+++ b/.github/workflows/lint_fmt.yml
@@ -25,5 +25,6 @@ jobs:
           cache: 'pnpm'
 
       - run: pnpm i
-      - run: pnpm eslint .
-      - run: pnpm prettier -c **/*.ts
+      - run: pnpm lint
+      # - run: pnpm eslint .
+      # - run: pnpm prettier -c **/*.ts
