--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "motion": "^11.15.0",
-    "next": "15.1.1",
+    "next": "^15.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "reactjs-popup": "^2.0.6",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
