--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "jotai": "^2.12.1",
     "motion": "^11.15.0",
     "next": "^15.1.7",
     "react": "19.0.0",
