chore: typescript loosening + ci

--- a/.github/workflows/lint_fmt.yml
+++ b/.github/workflows/lint_fmt.yml
@@ -25,5 +25,6 @@ jobs:
 
       - run: pnpm i
       - run: pnpm lint
+      - run: pnpm tsc
       # - run: pnpm eslint .
       # - run: pnpm prettier -c **/*.ts
