--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@tanstack/react-query": "^5.67.1",
+    "@tanstack/react-query-devtools": "^5.67.1",
     "jotai": "^2.12.1",
+    "ky": "^1.7.5",
     "motion": "^11.15.0",
     "next": "^15.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "reactjs-popup": "^2.0.6",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
