--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^15.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-sliding-side-panel": "^2.0.5",
     "reactjs-popup": "^2.0.6",
     "uuid": "^11.0.3"
   },
