--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.0",
     "jotai": "^2.12.1",
     "motion": "^11.15.0",
-    "next": "^15.1.7",
+    "next": "^15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-sliding-side-panel": "^2.0.5",
     "reactjs-popup": "^2.0.6",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
