--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "ky": "^1.7.5",
     "motion": "^11.15.0",
     "next": "^15.1.7",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "reactjs-popup": "^2.0.6",
     "uuid": "^11.0.3",
+    "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
