--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "reactjs-popup": "^2.0.6",
+    "ulid": "^3.0.0",
     "uuid": "^11.0.3",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
