--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-toast": "^1.2.11",
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-query-devtools": "^5.67.1",
     "jotai": "^2.12.1",
