--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-toast": "^1.2.11",
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-query-devtools": "^5.67.1",
     "jotai": "^2.12.1",
     "ky": "^1.7.5",
+    "lucide-react": "^0.511.0",
     "motion": "^11.15.0",
     "next": "^15.1.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "reactjs-popup": "^2.0.6",
     "ulid": "^3.0.0",
     "uuid": "^11.0.3",
